# FLAP

./: CMakeLists.txt
cmake/: PackageConfig.cmake.in
cmake/Modules/: AddExternalGitPackage.cmake  GitSubmoduleUpdate.cmake
src/lib/: CMakeLists.txt
src/tests/: CMakeLists.txt
